<resources>
    <string name="appName">carduinodroid</string>
    <string name="appNameShort">cardudroid</string>
    <string name="logoDescription">carduinodroid logo</string>
    <string name="titleSettings">Settings</string>
    <string name="titleDriveActivity">Drive</string>
    <string name="closeApp">Close</string>
    <string name="exitApp">Exit</string>
    <string name="drive">Drive</string>
    <string name="monitore">Monitor Data</string>
    <string name="startSerialService">Start Serial</string>
    <string name="stopSerialService">Stop Serial</string>
    <string name="titleActivitySettings">Settings</string>
    <string name="bluetoothPair">Pair Bluetooth Devices</string>
    <string name="imageViewDeviceRemoteIpDesc">describes the remote device</string>
    <string name="imageViewSettingsRemoteIpDesc">settings for the remote device</string>
    <string name="imageViewStatusIpDesc">describes the ip connection status</string>
    <string name="imageViewDeviceTransceiverDesc">descibes the transceiver device</string>
    <string name="imageViewSettingsTransceiverDesc">settings for the transceiver device</string>
    <string name="imageViewConnectionSerialDesc">describes the serial connection status</string>
    <string name="imageViewTypeSerialDesc">describes the serial connection type</string>
    <string name="imageViewSettingsBluetoothDesc">settings for the bluetooth device</string>
    <string name="imageViewDeviceArduinoDesc">describes the arduino device</string>
    <string name="imageViewGoDrive">forwards to the drive view</string>
    <string name="buttonDriveDesc">push to drive the car in direct or remote mode</string>
    <string name="buttonHornDesc">push to play the horn sound</string>
    <string name="buttonFrontLightDesc">push to toggle the front lights</string>
    <string name="buttonStatusLedDesc">push to toggle the status led</string>
    <string name="buttonCameraSettingsDesc">camera settings</string>
    <string name="imageViewSwitchModeDesc">switch user modes</string>
    <string name="labelIpDirect">directly connected device</string>
    <string name="labelIpRemote">remote IP:</string>
    <string name="labelIpLocal">my IP:</string>
    <string name="labelIpTransceiver">transceiver IP:</string>
    <string name="ipDummyRemote">141.24.11.100</string>
    <string name="ipDummyTransceiver">141.24.11.199</string>
    <string name="ipDummyLocal">127.0.0.1</string>
    <string name="ipConnection">IP Status:</string>
    <string name="ipConnectionStatus">%1$s</string>
    <string name="ipConnectionError">%1$s</string>
    <string name="serialConnection">Serial Status:</string>
    <string name="serialConnectionStatus">%1$s</string>
    <string name="serialConnectionError">%1$s</string>
    <string name="serialDeviceArduino">Arduino:</string>
    <string name="serialDeviceBluetooth">Bluetooth:</string>
    <string name="serialDeviceNone">N/A</string>
    <string name="connectionStateIdle">Idle</string>
    <string name="connectionStateTryFind">Try to find …</string>
    <string name="connectionStateFound">Found</string>
    <string name="connectionStateTryConnect">Try to connect …</string>
    <string name="connectionStateConnected">Connected</string>
    <string name="connectionStateRunning">Running</string>
    <string name="connectionStateError">Error</string>
    <string name="connectionStateStreamError">Streamerror</string>
    <string name="connectionStateTryConnectError">Error while connecting</string>
    <string name="connectionStateUnknown">Unknown</string>
    <string name="connectionStateDefaultError">Unknown error</string>
    <string name="communicationStatusIdle">Idle</string>
    <string name="communicationStatusConnecting">Connecting</string>
    <string name="communicationStatusOk">Communication Established</string>
    <string name="communicationStatusError">Error</string>
    <string name="driveSpeed">%1$04d Speed</string>
    <string name="driveSteer">%1$04d Steering</string>
    <string name="driveStatus">Status LED</string>
    <string name="driveFrontLight">Front light</string>
    <string name="driveFailsafeStop">Soft break</string>
    <string name="driveDebug">Show debug screen</string>
    <string name="driveOrientation">Orientation %1$s</string>
    <string name="orientationPortrait">Portrait</string>
    <string name="orientationLandscape">Landscape</string>
    <string name="driveDistanceFront">%1$4.1f Distance Front [cm]</string>
    <string name="driveDistanceBack">%1$4.1f Distance Back [cm]</string>
    <string name="driveCurrent">%1$4.1f Current [mA]</string>
    <string name="driveVoltage">%1$4.1f Voltage [V]</string>
    <string name="driveRelativeBattery">%1$4.1f Relative Battery [%%]</string>
    <string name="driveAbsoluteBattery">%1$4.1f Absolute Battery [mAh]</string>
    <string name="driveTemperature">%1$4.1f Temperature [°C]</string>
    <string name="driveBandwidth">%1$4.1f Bandwidth [kB/s]</string>
    <string name="driveAngle0">%1$04d\trel Azimut [°]</string>
    <string name="driveAngle1">%1$04d\trel Pitch [°]</string>
    <string name="driveAngle2">%1$04d\trel Roll [°]</string>
    <string name="defaultIp">141.24.11.1</string>
    <string name="localIp">127.0.0.1</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="openBluetoothSettingsTitle">Open bluetooth settings</string>
    <string name="openBluetoothSettingsText">Pair your Carduinodroid with this mobile</string>
    <string name="serialDefaultBluetoothDeviceName">HC</string>
    <string name="serialBluetoothEnable">enabled Bluetooth</string>
    <string name="serialBluetoothDisable">disabled Bluetooth</string>
    <string name="serialBluetoothPaired">bluetooth device paired: %1$s</string>
    <string name="serialCarduinoPaired">carduinodroid device paired: %1$s</string>
    <string name="serialCarduinoAddress">carduinodroid device address: %1$s</string>
    <string name="serialErrorNoBluetoothDevicePaired">no bluetooth paired</string>
    <string name="serialErrorNoBluetoothDeviceChosen">choose bluetooth device</string>
    <string name="serialErrorNoCarduinoBluetoothDeviceFound">%1$d paired, "%2$s" not found</string>
    <string name="serialErrorTooMuchCarduinoBluetoothDeviceFound">%1$d paired containing "%2$s" found</string>
    <string name="serialErrorNoBluetoothAdapter">no bluetooth on mobile available</string>
    <string name="serialErrorNotIdle">find: was not idle</string>
    <string name="serialErrorReceiveTimeout">receive time out</string>
    <string name="serialErrorReceiveFail">receive failed: %1$s</string>
    <string name="serialErrorSendFail">send failed: %1$s</string>
    <string name="serialErrorSocketCreation">Socket creation failed: %1$s</string>
    <string name="serialErrorSocketConnect">Socket unable to connect: %1$s</string>
    <string name="serialErrorSocketClose">Socket can not be closed: %1$s</string>
    <string name="serialErrorInputStream">Inputstream: %1$s</string>
    <string name="serialErrorOutputStream">OutputStream: %1$s</string>
    <string name="serialErrorUnused">Closing unused serial</string>
    <string name="serialErrorUnexpectedClose">unexpected closing</string>
    <string name="serialErrorClose">while closing: %1$s</string>
    <string name="serialErrorNoUsbManager">no usb manager available</string>
    <string name="serialErrorNoUsbManagerPermission">no usb manager permission</string>
    <string name="serialErrorNoArduino">no Arduino</string>
    <string name="serialUsbDeviceFound">%1$s found</string>
    <string name="serialErrorNoUsbPermission">USB: needs permission</string>
    <string name="serialErrorUsbDeviceOpen">opening USB device failed</string>
    <string name="serialErrorUsbDeviceClaim">claiming USB device failed</string>
    <string name="serialErrorNoUsbRxEndpoint">no Rx endpoint found</string>
    <string name="serialErrorNoUsbTxEndpoint">no Tx endpoint found</string>
    <string name="serialErrorNoDataPointer">no pointer to resource</string>
    <string name="serialErrorUsbRelease">usb interface release failed</string>
    <string name="serialUsbRelease">usb interface released</string>
    <string name="serialErrorUsbNumInterface">usb too few interfaces</string>
    <string name="labelIpDialogInfo">Enter your destination Address here:</string>
    <string name="labelIpDialogButtonOK">OK</string>
    <string name="labelIpDialogButtonCancel">Cancel</string>
    <string name="labelCamResolution">Resolution:</string>
    <string name="labelCamType">Front Camera:</string>
    <string name="labelCamRotation">Rotation (Degree):</string>
    <string name="labelCamQuality">Quality (0-100):</string>
    <string name="labelCamTypeInfo">Activated</string>
    <string name="labelCamDegreeHint">Rotation Degree</string>
    <string name="labelAlert">A Resolution above 640x480 can cause memory leaks and crashes on old devices!</string>
    <string name="arduino_uno">Arduino Uno</string>
    <string name="arduino_uno_r3">Arduino Uno R3</string>
    <string name="arduino_mega">Arduino Mega 2560</string>
    <string name="arduino_mega_r3">Arduino Mega 2560 R3</string>
    <string name="arduino_mega_adk">Arduino Mega 2560 ADK</string>
    <string name="arduino_mega_adk_r3">Arduino Mega 2560 ADK R3</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General settings</string>
    <string name="pref_header_serial">Serial connection</string>
    <string name="pref_title_control_mode">Control mode</string>
    <string name="pref_key_control_mode">pref_key_control_mode</string>
    <string name="controlModeTransceiver">Mode: Transceiver</string>
    <string name="controlModeRC">Mode: Remote Control</string>
    <string name="controlModeDirect">Mode: Direct</string>
    <string-array name="pref_control_mode">
        <item>@string/controlModeTransceiver</item>
        <item>@string/controlModeRC</item>
        <item>@string/controlModeDirect</item>
    </string-array>
    <string-array name="pref_control_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="pref_key_screensaver">pref_key_screensaver</string>
    <string name="pref_title_screensaver">Screensaver</string>
    <string name="pref_screensaver_off">Off</string>
    <string name="pref_screensaver_5" >Turn on after  5s</string>
    <string name="pref_screensaver_10">Turn on after 10s</string>
    <string name="pref_screensaver_30">Turn on after 30s</string>
    <string name="pref_screensaver_60">Turn on after 60s</string>
    <string-array name="pref_screensaver">
        <item>@string/pref_screensaver_off</item>
        <item>@string/pref_screensaver_5</item>
        <item>@string/pref_screensaver_10</item>
        <item>@string/pref_screensaver_30</item>
        <item>@string/pref_screensaver_60</item>
    </string-array>
    <string-array name="pref_screensaver_values">
        <item>-1</item>
        <item>5000</item>
        <item>10000</item>
        <item>30000</item>
        <item>60000</item>
    </string-array>
    <string name="pref_key_reset_battery">pref_key_reset_battery</string>
    <string name="pref_title_reset_battery">Reset battery accumulation</string>
    <string name="pref_battery_idle">idle</string>
    <string name="pref_battery_reset">resetting: will switch back to idle on successr</string>
    <string-array name="pref_reset_battery">
        <item>@string/pref_battery_idle</item>
        <item>@string/pref_battery_reset</item>
    </string-array>
    <string name="pref_title_serial_type">Serial connection type</string>
    <string name="pref_key_serial_type">pref_key_serial_type</string>
    <string name="pref_title_bluetooth_device_name">Bluetooth device name</string>
    <string name="pref_key_bluetooth_device_name">pref_key_bluetooth_device_name</string>
</resources>