<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_serial_type"
        android:entryValues="@array/pref_serial_type_values"
        android:key="@string/pref_key_serial_type"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_serial_type"
        android:icon="@drawable/ic_sync_black_24dp"/>

    <Preference
        android:title="@string/pref_title_bluetooth_device_name"
        android:key="@string/pref_key_bluetooth_device_name"
        android:defaultValue="@string/serialDefaultBluetoothDeviceName"
        android:icon="@drawable/device_arduino"
        android:enabled="true">
        <intent android:action="tuisse.carduinodroid_android.ChooseBluetoothDeviceActivity"/>
    </Preference>
</PreferenceScreen>
