<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/PreferencesTheme">
<!--
    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_social_recommendations" />
-->
    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
<!--
    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="example_text"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />
-->

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_control_mode"
        android:entryValues="@array/pref_control_mode_values"
        android:key="@string/pref_key_control_mode"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_control_mode"
        android:icon="@drawable/ic_info_black_24dp"/>

    <SwitchPreference
        android:defaultValue="false"
        android:summary="@string/pref_summary_reset_battery"
        android:key="@string/pref_key_reset_battery"
        android:title="@string/pref_title_reset_battery"/>


</PreferenceScreen>
