<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/labelAlert"
        android:id="@+id/textViewAlert"
        android:layout_marginLeft="5dp"
        android:textColor="#ff0000" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewAlert">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tableRowSecond">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/labelCamResolution"
                android:id="@+id/textView"
                android:layout_weight="1"
                android:layout_marginLeft="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/labelCamType"
                android:id="@+id/textView2"
                android:layout_weight="1"
                android:layout_marginRight="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tableRowThird">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerResolution"
                android:layout_weight="1"
                android:layout_marginLeft="5dp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelCamTypeInfo"
                android:id="@+id/checkboxCameraType"
                android:layout_weight="1"
                android:layout_marginRight="5dp" />
        </TableRow>


        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tableRowFourth">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/labelCamRotation"
            android:id="@+id/textView3"
            android:layout_weight="1"
            android:layout_marginLeft="5dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/labelCamQuality"
            android:id="@+id/textView4"
            android:layout_weight="1"
            android:layout_marginRight="5dp" />

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tableRowFifth">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerDegree"
                android:layout_weight="1"
                android:layout_marginLeft="5dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="3"
                android:id="@+id/editQuality"
                android:hint="@string/labelCamDegreeHint"
                android:layout_weight="1"
                android:layout_marginRight="5dp" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelIpDialogButtonOK"
                android:id="@+id/buttonOK"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:layout_marginBottom="5dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelIpDialogButtonCancel"
                android:id="@+id/buttonCancel"
                android:layout_weight="1"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp" />
        </TableRow>
    </TableLayout>

</RelativeLayout>
