<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/labelIpDialogInfo"
            android:id="@+id/textInfo" />

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editIP"
            android:layout_gravity="center_horizontal"
            android:inputType="number"
            android:digits="0123456789."
            android:hint="Transceiver IP"
            android:dropDownHeight="150dp"/>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelIpDialogButtonOK"
                android:id="@+id/buttonOK"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelIpDialogButtonCancel"
                android:id="@+id/buttonCancel"
                android:layout_weight="1"/>
        </TableRow>

    </LinearLayout>
</RelativeLayout>
